--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	</head>
 	<body class="is-preload">
 		<div id="wrapper">
-			<div id="bg"></div>
-			<div id="overlay"></div>
+			<!-- <div id="bg"></div> -->
+			<!-- <div id="overlay"></div> -->
 			<div id="main">
 
 				<!-- Header -->
@@ -39,5 +39,6 @@
 			window.ontouchmove = function() { return false; }
 			window.onorientationchange = function() { document.body.scrollTop = 0; }
 		</script>
+		<script type="module" src="./modules/background.js"></script>
 	</body>
 </html>
